SOLVED ELF DATA SECTION LOADING - WAS ALIGNMENT

--- a/bmarks/Makefile
+++ b/bmarks/Makefile
@@ -14,15 +14,14 @@ BIN_A64 		:=$(SRC:%.c=%.$(EXT_A64_BIN))
 DASM_A64 		:=$(SRC:%.c=%.$(EXT_A64_DASM))
 
 C_CLAGS			:=-O0 -std=gnu99 -fno-stack-protector \
-					-fno-exceptions -fno-asynchronous-unwind-tables \
-					-fPIC
+					-fno-exceptions -fno-asynchronous-unwind-tables
 C_TO_X86		:=gcc $(C_CLAGS) -D_DEBUG
 
 A64_ARCH		:=-target aarch64-none-elf
 C_TO_A64 		:=clang $(A64_ARCH) $(C_CLAGS) -nostdlib
 C_TO_A64_OBJ 	:=$(C_TO_A64) -c
 OBJ_TO_A64_BIN 	:=aarch64ld -Ttext=0x100 -e main
-C_TO_A64_ASM 	:=$(C_TO_A64) -S
+C_TO_A64_ASM 	:=$(C_TO_A64) -fverbose-asm -S
 OBJ_TO_A64_DASM :=aarch64objdump -xd
 
 %.$(EXT_X86_BIN): %.c
