Added bude to benchmarks and model exec latency done and tested

--- a/bmarks/Makefile
+++ b/bmarks/Makefile
@@ -13,12 +13,22 @@ ASM_A64 		:=$(SRC:%.c=%.$(EXT_A64_ASM))
 DASM_A64 		:=$(SRC:%.c=%.$(EXT_A64_DASM))
 BIN_A64 		:=$(SRC:%.c=%.$(EXT_A64_BIN))
 
-C_CLAGS			:=-O0 -std=gnu99 -fno-stack-protector \
+OPT 			:=1
+
+ifeq ($(OPT), 1)
+	OPT_FLAGS 	:=-O0
+else ifeq ($(OPT), 2)
+	OPT_FLAGS 	:=-Oz
+else
+	OPT_FLAGS 	:=-O3 -ffast-math -fvectorize -mcpu=cortex-a57
+endif
+
+C_CLAGS			:=-std=gnu99 -fno-stack-protector \
 					-fno-exceptions -fno-asynchronous-unwind-tables
 C_TO_X86		:=gcc $(C_CLAGS) -D_DEBUG
-
-A64_ARCH		:=-target aarch64-none-elf
-C_TO_A64 		:=clang $(A64_ARCH) $(C_CLAGS) -nostdlib
+# -O3 -ffast-math -march=armv8.1-a+fp+simd -mtune=vulcan
+A64_ARCH		:=-target aarch64-arm-none-elf
+C_TO_A64 		:=clang $(A64_ARCH) $(C_CLAGS) -nostdlib $(OPT_FLAGS)
 C_TO_A64_OBJ 	:=$(C_TO_A64) -c
 OBJ_TO_A64_BIN 	:=aarch64ld -Ttext=0x100 -e main
 C_TO_A64_ASM 	:=$(C_TO_A64) -fverbose-asm -S
